Fix bugs in select2 boxes and improve scroll look
Removed the options that made removing the last selection from a select2
box fiddly and fixed an issue where the dialogue boxes would render over
the navbar at the top of the page. The dialogue boxes still appear above
when the select2 is opened near the bottom of the page but to change
that would require editing the source of the select2 library so I'll
leave it for the moment. Added the jQuery Scrollbar library to the
project to make the scrollbar a little nicer looking in the select2
boxes.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,7 @@
 
   #navsection {
     background-color: #4267b2;
+    z-index: 1151;
   }
 
   .vline {
@@ -225,6 +226,7 @@
 
   .select2-container--bootstrap4 .select2-dropdown {
     border-color: #4267b2;
+    border-top: 1px;
   }
 
   .select2-container--open .select2-selection {
